--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,128 +8,147 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!" />
-
-        <Button
-            android:id="@+id/show_toast"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="button" />
-
-        <ToggleButton
-            android:id="@+id/toggleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textOff="text off"
-            android:textOn="text on" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <CheckBox
-            android:id="@+id/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Please touch me" />
-
-        <CheckBox
-            android:id="@+id/checkbox_custom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/checkbox"
-            android:text="Please touch me more" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Your option:" />
-
-        <RadioGroup
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <RadioButton
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:button="@drawable/custom_radio_button"
-                android:text="me" />
+                android:text="Hello World!" />
 
-            <RadioButton
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/show_toast"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:button="@drawable/custom_radio_button"
-                android:text="me" />
-        </RadioGroup>
+                android:text="button" />
 
-        <Button
-            android:id="@+id/show_dialog"
+            <ToggleButton
+                android:id="@+id/toggleButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="text off"
+                android:textOn="text on" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Please touch me" />
+
+            <CheckBox
+                android:id="@+id/checkbox_custom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/checkbox"
+                android:text="Please touch me more" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Show dialog" />
+            android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Your option:" />
 
-        <AutoCompleteTextView
-            android:id="@+id/auto"
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/custom_radio_button"
+                    android:text="me" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:button="@drawable/custom_radio_button"
+                    android:text="me" />
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/show_dialog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Show dialog" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <AutoCompleteTextView
+                android:id="@+id/auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/change_activity_2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="RecyclerView" />
+
+        <Button
+            android:id="@+id/change_activity_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date and time picker" />
+
+        <Button
+            android:id="@+id/change_activity_4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tab layout and custom edit text" />
+
+        <Button
+            android:id="@+id/change_activity_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent example" />
+
+        <Button
+            android:id="@+id/change_activity_6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GSON" />
+
+        <Button
+            android:id="@+id/change_activity_7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="web view" />
+
+        <Button
+            android:id="@+id/change_activity_8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Storage" />
+
+        <fragment
+            android:id="@+id/fragment1"
+            android:name="com.example.myapplication5.fragments.Fragment1"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
+        <fragment
+            android:id="@+id/fragment2"
+            android:name="com.example.myapplication5.fragments.Fragment2"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/change_activity_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RecyclerView" />
-
-    <Button
-        android:id="@+id/change_activity_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Date and time picker" />
-
-    <Button
-        android:id="@+id/change_activity_4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tab layout and custom edit text" />
-
-    <Button
-        android:id="@+id/change_activity_5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Intent example" />
-    <Button
-        android:id="@+id/change_activity_6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="GSON" />
-
-    <fragment
-        android:id="@+id/fragment1"
-        android:name="com.example.myapplication5.fragments.Fragment1"
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="com.example.myapplication5.fragments.Fragment2"
-        android:layout_width="match_parent"
-        android:layout_height="200dp" />
-</LinearLayout>
+</ScrollView>
